test/oscar/compiler/errors/idNotFound.oscar
def main() => unit = {
  int x =4;
  println(y);
}